--- a/src/components/AddQuestionModal/AddQuestionForms/QuestionImageUploadForm.module.css
+++ b/src/components/AddQuestionModal/AddQuestionForms/QuestionImageUploadForm.module.css
@@ -12,14 +12,12 @@
   transform: scale(1.05);
 }
 
-.modal {
+.preview {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
-.roundedInput {
-  padding: 10px;
-  border-radius: 20px;
-  margin-left: 0;
-  margin: 10px;
-  width: 75%;
+.preview:hover {
+  transform: scale(1.05);
 }
